[tool.poetry]
name = "rotsim2d"
version = "0.6.0-alpha.3"
description = "Simulate 2D rovibrational spectra of gas-phase molecular samples"
authors = ["Grzegorz Kowzan <grzegorz@kowzan.eu>"]
readme = "README.md"
homepage = "https://gitlab.com/allisonlab/mdcs/rotsim2d"
repository = "https://gitlab.com/allisonlab/mdcs/rotsim2d"
classifiers=[
	'Development Status :: 3 - Alpha',
        'Environment :: Console',
        'Intended Audience :: Science/Research',
        'Topic :: Scientific/Engineering :: Physics']
include = ["rotsim2d/py.typed"]

[tool.poetry.dependencies]
python = ">=3.7, <3.9"
asteval = ">=0.9.25"
h5py = ">=3.4"
numpy = ">=1.16.5"
scipy = ">=1.3"
anytree = ">=2.8.0"
sympy = ">=1.8"
importlib-metadata = {version=">=1.0", python="<3.8"}
molspecutils = {version=">=0.2.0", allow-prereleases=true}
gkpywigxjpf = {version=">=0.1.0", allow-prereleases=true, optional=true}
knickknacks = {version=">=0.2.0", allow-prereleases=true, optional=true}
pyfftw = {version="*", optional=true}
matplotlib = {version = ">=3.3.4", optional = true}
ipython = {version = ">=7.2.0", optional = true}
prompt-toolkit = {version = "<3.0.0", optional = true}
PyQt5 = {version = "<=5.14.0", optional = true}
Sphinx = {version = "3.5.4", optional = true}

[tool.poetry.dev-dependencies]
pytest = "*"
tox = "*"
jedi-language-server = "*"
yapf = "*"
isort = "*"
bump2version = "*"

[tool.poetry.extras]
interactive = ["matplotlib", "ipython", "PyQt5", "jupyter", "knickknacks", "prompt-toolkit", "pygobject"]
doc = ["Sphinx"]
pyfftw = ["pyfftw"]
wigxjpf = ["wigxjpf"]

[tool.yapf]
based_on_style = "pep8"
no_spaces_around_selected_binary_operators = true
spaces_around_power_operator = false

[[tool.poetry.source]]
name = "local"
url = "http://127.0.0.1:4040/simple/"

[[tool.poetry.source]]
name = "allisonlab"
url = "https://gitlab.com/api/v4/projects/26140156/packages/pypi"

[build-system]
requires = ["poetry-core>=1.0.0", "wheel"]
build-backend = "poetry.core.masonry.api"
