[metadata]
name = rotsim2d
version = attr: rotsim2d.__version__
author = Grzegorz Kowzan
author_email = grzegorz@kowzan.eu
description = Simulate 2D rovibrational spectra of gas-phase molecular samples
long_description = file: README.md
url = https://gitlab.com/allisonlab/mdcs/rotsim2d
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Physics

[options]
packages = rotsim2d, rotsim2d.visual, rotsim2d.symbolic
python_requires = >=3.6
install_requires =
    asteval >= 0.9.25
    h5py >= 3.4
    numpy >=1.16.5
    scipy >=1.3
    anytree >=2.8.0
    sympy >=1.8
    importlib-metadata >= 1.0; python_version < "3.8"
    molspecutils >= 0.2.1
    knickknacks >= 0.2.2

[options.extras_require]
doc = Sphinx
pyfftw = pyfftw
test = gkpywigxjpf; pytest

[options.package_data]
rotsim2d = py.typed